we can just go top-down through an upstream tree
for a given path to find a node; no additional stack etc. needed