@@ -1,35 +1,43 @@
 package org.openlca.ipc.handlers;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Stack;
+import java.util.Objects;
 
 import org.openlca.core.results.UpstreamNode;
 import org.openlca.core.results.UpstreamTree;
 
 class Upstream {
 
-	static List<UpstreamNode> calculate(UpstreamTree tree, List<StringPair> ids) {
-		Collections.reverse(ids);
-		Stack<StringPair> path = new Stack<>();
-		path.addAll(ids);
-		List<UpstreamNode> results = Collections.singletonList(tree.root);
-		pathLoop: while (!path.isEmpty()) {
-			StringPair next = path.pop();
-			for (UpstreamNode result : results) {
-				if (!result.provider().provider().refId.equals(next.first))
-					continue;
-				if (!result.provider().flow().refId.equals(next.second))
-					continue;
-				results = tree.childs(result);
-				continue pathLoop;
+	static List<UpstreamNode> nodesOf(UpstreamTree tree, List<NodeId> path) {
+		var next = List.of(tree.root);
+		for (var nodeId : path) {
+			UpstreamNode node = null;
+			for (var n : next) {
+				if (nodeId.matches(n)) {
+					node = n;
+					break;
+				}
 			}
-			throw new IllegalArgumentException("No upstream results available for given path");
+			if (node == null) {
+				next = List.of();
+				break;
+			}
+			next = tree.childs(node);
 		}
-		return results;
+		return next;
 	}
 
-	record StringPair(String first, String second) {
+	record NodeId(String providerId, String flowId) {
+
+		boolean matches(UpstreamNode node) {
+			if (node == null || node.provider() == null)
+				return false;
+			var p = node.provider();
+			if (p.provider() == null || p.flow() == null)
+				return false;
+			return Objects.equals(providerId, p.provider().refId)
+					&& Objects.equals((flowId, p.flow().refId));
+		}
 	}
 
 }
